--- a/step1.html
+++ b/step1.html
@@ -13,7 +13,7 @@
 <body>
     <ul class="accordion">
         <li>
-            <div class="accordion-control"><h3><center>STEP 1</center></h3></div>
+            <div class="accordion-control"><h3><center></center></h3></div>
             <div class="accordion-panel" id="ap1">
                 <div class="grid-container" id=grid>
 
@@ -58,7 +58,7 @@
                         <div class="menu" id="menu">
                             <button class="menu-btn" id="vare">
                                 <center>
-                                    <p>Køb extra vare</p>
+                                    <p>Ekstra Produkter</p>
                                 </center>
                             </button>
 
@@ -83,13 +83,13 @@
         </li>
 
         <li>
-            <div class="accordion-control"><h3><center>STEP 2</center></h3></div>
+            <div class="accordion-control"><h3><center></center></h3></div>
             <div class="accordion-panel" id="ap2">
                 <div class="grid-container" id=grid2>
                     <div></div><!-- Leave Empty-->
                     <div>
                         <center>
-                            <h2>EXTRA VARE</h2><br>
+                            <h2>EKSTRA PRODUKTER</h2><br>
                             <br>
                             <h1>KOMMER SNART</h1><br>
                         </center>
@@ -122,7 +122,7 @@
             </div>
         </li>
         <li>
-            <div class="accordion-control"><h3><center>STEP 3</center></h3></div>
+            <div class="accordion-control"><h3><center></center></h3></div>
             <div class="accordion-panel" id="ap3">
                 <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
@@ -179,7 +179,7 @@
             </div>
         </li>
         <li>
-            <div class="accordion-control"><h3><center>STEP 4</center></h3></div>
+            <div class="accordion-control"><h3><center></center></h3></div>
             <div class="accordion-panel" id="ap4">
                 <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
@@ -222,7 +222,7 @@
             </div>
         </li>
         <li>
-            <div class="accordion-control"><h3><center>STEP 5</center></h3></div>
+            <div class="accordion-control"><h3><center></center></h3></div>
             <div class="accordion-panel" id="ap5">
                 <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
@@ -262,7 +262,7 @@
             </div>
         </li>
         <li>
-            <div class="accordion-control"><h3><center>STEP 5</center></h3></div>
+            <div class="accordion-control"><h3><center></center></h3></div>
             <div class="accordion-panel" id="ap6">
         </li>
     </ul>
